ecmascript/parser/tests/test262-error-references/fail/7909e04a06928dea.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/7909e04a06928dea.js:1:14
  |
1 | if(true) let a = 1;
  |              ^

